Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18875

qmt_id_lock_glimpse()) ASSERTION( lqe->lqe_gl ) failed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      All fields of an lqe, especially flags, must be changed only under a lock protection. Otherwise it might cause the following panic:

       [3113899.284018] LustreError: 18553:0:(qmt_lock.c:973:qmt_id_lock_glimpse()) ASSERTION( lqe->lqe_gl ) failed: 
      [3113899.286303] LustreError: 18553:0:(qmt_lock.c:973:qmt_id_lock_glimpse()) LBUG
      [3113899.287903] CPU: 8 PID: 18553 Comm: qmt_reba_testfs Kdump: loaded Tainted: G           OE     -------- -  - 4.18.0-553.27.1.el8_lustre.ddn17.x86_64 #1
      [3113899.293031] Call Trace:
      [3113899.293736]  dump_stack+0x41/0x60
      [3113899.294569]  lbug_with_loc.cold.8+0x5/0x58 [libcfs]
      [3113899.295635]  qmt_reba_thread+0x9ae/0x9d0 [lquota]
      [3113899.297904]  kthread+0x134/0x150
      [3113899.299628]  ret_from_fork+0x1f/0x40

      Attachments

        Activity

          People

            scherementsev Sergey Cheremencev
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: