lustre/quota/qmt_lock.c
@@ -401,9 +401,12 @@ int qmt_lvbo_update(struct lu_device *ld, struct ldlm_resource *res,
 	need_revoke = qmt_clear_lgeg_arr_nu(lqe, stype, idx);
 	if (lvb->lvb_id_rel == 0) {
 		/* nothing to release */
-		if (lvb->lvb_id_may_rel != 0)
+		if (lvb->lvb_id_may_rel != 0) {
 			/* but might still release later ... */
+			lqe_write_lock(lqe);
 			lqe->lqe_may_rel += lvb->lvb_id_may_rel;
+			lqe_write_unlock(lqe);
+		}
 	}
 
 	if (!need_revoke && lvb->lvb_id_rel == 0)
@@ -942,12 +945,6 @@ static void qmt_id_lock_glimpse(const struct lu_env *env,
 	}
 
 	lqe_write_lock(lqe);
-	/*
-	 * It is possible to add an lqe in a 2nd time while the same lqe
-	 * from the 1st time is still sending glimpse
-	 */
-	if (lqe->lqe_gl)
-		GOTO(out, 0);
 	/* The purpose of glimpse callback on per-ID lock is twofold:
 	 * - notify slaves of new qunit value and hope they will release some
 	 *   spare quota space in return
@@ -966,6 +963,8 @@ static void qmt_id_lock_glimpse(const struct lu_env *env,
 		 * replies if needed */
 		lqe->lqe_may_rel = 0;
 
+	/* The rebalance thread is the only thread which can issue glimpses */
+	LASSERT(!lqe->lqe_gl);
 	lqe->lqe_gl = true;
 	lqe_write_unlock(lqe);
 
@@ -982,7 +981,6 @@ static void qmt_id_lock_glimpse(const struct lu_env *env,
 	}
 	LASSERT(lqe->lqe_gl);
 	lqe->lqe_gl = false;
-out:
 	lqe_write_unlock(lqe);
 	ldlm_resource_putref(res);
 	EXIT;
